--- a/UniversityApp/src/app/student/dashboard/dashboard.component.html
+++ b/UniversityApp/src/app/student/dashboard/dashboard.component.html
@@ -1,3 +1,45 @@
+<div class="container dashboard">
+    <div class="row row-1">
+        <div class="col">
+            <div class="card">
+                <div class="card-header">
+                    Course
+                </div>
+                <div class="card-body">
+                 
+                    <h5 class="card-title">{{ CourseAvailable }}</h5>
+                    <p class="card-text">Available Courses</p>
+                    <a class="btn btn-primary" routerLink="/student_DepartmentInfo">Go</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <div class="card-header">
+                    Branch
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title"> {{ RegCourses }}</h5>
+                    <p class="card-text">Registered Courses</p>
+                    <a routerLink="/student_CourseInfo" class="btn btn-primary">Go</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <div class="card-header">
+                    Examination
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title"> {{ ExamCount }}</h5>
+                    <p class="card-text">Examination Pending
+                    <p>
+                        <a routerLink="/admin_CourseInfo"class="btn btn-primary">Go</a>
+                </div>
+            </div>
+        </div>
+
+
 <div class="container Registered-Courses">
     <h2 class="text-center">Registered Courses</h2>
     <table class="table table-hover">
